Add auth API and integrate with login

--- a/improved-website-v14/login.html
+++ b/improved-website-v14/login.html
@@ -168,26 +168,48 @@
         });
 
         // Handle login submission
-        loginForm.addEventListener('submit', (e) => {
+        loginForm.addEventListener('submit', async (e) => {
             e.preventDefault();
-            const emailInput = loginForm.querySelector('input[type="email"]');
-            const emailVal = emailInput.value.trim();
-            let userName = 'User';
-            if (emailVal.includes('@')) {
-                userName = emailVal.split('@')[0];
+            const email = loginForm.querySelector('input[type="email"]').value.trim();
+            const password = loginForm.querySelector('input[type="password"]').value;
+            try {
+                const res = await fetch('/api/auth/login', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ email, password })
+                });
+                if (!res.ok) throw new Error('Login failed');
+                const data = await res.json();
+                localStorage.setItem('authToken', data.token);
+                const name = data.user.name || email.split('@')[0];
+                localStorage.setItem('ahelpUserName', name);
+                window.location.href = 'dashboard.html';
+            } catch (err) {
+                alert(err.message);
             }
-            localStorage.setItem('ahelpUserName', userName);
-            // Redirect to dashboard
-            window.location.href = 'dashboard.html';
         });
         // Handle sign up submission
-        signupForm.addEventListener('submit', (e) => {
+        signupForm.addEventListener('submit', async (e) => {
             e.preventDefault();
             const firstName = signupForm.querySelector('input[placeholder="Jane"]').value.trim();
-            if (firstName) {
-                localStorage.setItem('ahelpUserName', firstName);
+            const lastName = signupForm.querySelector('input[placeholder="Doe"]').value.trim();
+            const email = signupForm.querySelector('input[type="email"]').value.trim();
+            const password = signupForm.querySelector('input[type="password"]').value;
+            const name = `${firstName} ${lastName}`.trim();
+            try {
+                const res = await fetch('/api/auth/register', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ email, password, name })
+                });
+                if (!res.ok) throw new Error('Registration failed');
+                const data = await res.json();
+                localStorage.setItem('authToken', data.token);
+                localStorage.setItem('ahelpUserName', data.user.name || firstName);
+                window.location.href = 'dashboard.html';
+            } catch (err) {
+                alert(err.message);
             }
-            window.location.href = 'dashboard.html';
         });
     </script>
     <!-- Back to Top Button -->
