--- a/improved-website-v14/health-assessment.html
+++ b/improved-website-v14/health-assessment.html
@@ -277,7 +277,7 @@
         });
         // Handle HRA form submission
         const form = document.getElementById('health-form');
-        form.addEventListener('submit', function(e) {
+        form.addEventListener('submit', async function(e) {
             e.preventDefault();
             const name = document.getElementById('name').value.trim();
             if (name) {
@@ -290,8 +290,20 @@
             const username = document.getElementById('username').value.trim();
             const password = document.getElementById('password').value.trim();
             if (username && password) {
-                 localStorage.setItem('ahelpUsername', username);
-                localStorage.setItem('ahelpPassword', password); // Only for demo purposes – do NOT do this in production
+                try {
+                    const res = await fetch('/api/auth/register', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({ email: username, password, name })
+                    });
+                    if (res.ok) {
+                        const data = await res.json();
+                        localStorage.setItem('authToken', data.token);
+                        localStorage.setItem('ahelpUserName', data.user.name || name);
+                    }
+                } catch (err) {
+                    console.error('Registration failed', err);
+                }
             }
 
             const exercise = parseInt(document.getElementById('exercise').value);
